# dobot_magican_sim

./: README.md
src/: README.md  README_vi.md
src/dobot_description/: CMakeLists.txt  package.xml
src/dobot_description/config/: magician_controllers.yaml
src/dobot_description/dobot_description/: control.py  kinematic_supervisor.py
src/dobot_description/launch/: gazebo_sim.launch.py  sim_and_view.launch.py  view_robot.launch.py
src/dobot_description/model/: dobot_gazebo.urdf.xacro  magician_gazebo.urdf.xacro  magician_standalone_gazebo.urdf.xacro
